--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -40,6 +40,8 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ML307)
     set(BOARD_TYPE "bread-compact-ml307")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32)
     set(BOARD_TYPE "bread-compact-esp32")    
+elseif(CONFIG_BOARD_TYPE_ESP_SIMPLE)
+    set(BOARD_TYPE "esp-simple")    
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_3)
     set(BOARD_TYPE "esp-box-3")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
