--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,11 +1,11 @@
 set(SOURCES "audio_codecs/audio_codec.cc"
             "audio_codecs/no_audio_codec.cc"
-            "audio_codecs/box_audio_codec.cc"
-            "audio_codecs/es8311_audio_codec.cc"
-            "audio_codecs/es8388_audio_codec.cc"
-            "audio_codecs/cores3_audio_codec.cc"
-            "audio_codecs/tcircles3_audio_codec.cc"
-            "audio_codecs/bt_audio_codec.cc"
+            # "audio_codecs/box_audio_codec.cc"
+            # "audio_codecs/es8311_audio_codec.cc"
+            # "audio_codecs/es8388_audio_codec.cc"
+            # "audio_codecs/cores3_audio_codec.cc"
+            # "audio_codecs/tcircles3_audio_codec.cc"
+            # "audio_codecs/bt_audio_codec.cc"
             "led/single_led.cc"
             "led/circular_strip.cc"
             "display/display.cc"
